2001-02-26 22:59 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/gtos2/gtos2.c
     ! hb_gt_ReadKey() uses KBD subsystem of OS/2 instead of any compiler runtime
       function to fetch characters from keyboard this way I can be sure that used memory
       is tileable.

2001-02-26 22:45 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * bugs fixed in ntxOrderListFocus() and ntxSeek(), which appeared after
       Set Order To 0

2001-02-26 13:45 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * include/hbapigt.h
    * Changed '#ifdef 0' block on line 78 to a comment block in order to
      avoid GCC warnings about the #ifdef argument starting with a digit.

2001-02-26 13:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * make_gnu.cmd
    * Added -r to make command to match make_gnu.bat.
    * Added output redirection to make command to match make_gnu.bat.

  * include/hbapigt.h
    * Changed '#ifdef HB_OS_DOS' on line 78 to '#ifdef 0',
      so that the DBCS compatible definitions of the line
      draw characters are always used.

  * source/Makefile
    * When building the bcc16 version of Harbour, don't build the compiler,
      because the djgpp version of the compiler needs to be used, because
      the bcc16 version of the compiler runs out of memory while building
      some of the Harbour library files.

2001-02-26 03:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Added support for UDFs, PRIVATEs, PUBLICs, LOCALs, and STATICs

   + contrib/dot/rp_run.ch
     * Command Header for PP Interpreter Mode.

   * contrib/dot/test.prg
     * Sample prg runable by PP.

   * contrib/dot/pp.txt
     * Updated documentation.

2001-02-25 13:20 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Minor optimization.

   + contrib/dot/pp.txt

2001-02-25 20:25 UTC+0300 Alex Shashkov <shashkov@ostu.ru>
   * harbour/source/rdd/dbfcdx2.h